src/test/deca/syntax/valid/synt/separate_with_new_line.deca
/*
    Description : Séparation avec une nouvelle ligne

    Résultat : OK
*/
{
    int
    a
    =
    1;
}
