src/test/deca/syntax/invalid/synt/too_big_negative_number.deca
/*
    Description : Nombre flottant trop petit

    Résultat : Erreur syntaxique
*/
{
    float f = -90000000000000000000000000000000000000000000000000000000000000000000.2;
}
